# FireWhal

./: .env  .gitignore  Cargo.toml  LICENSE  Progress.txt  README.md  app_identity.toml  debug_install.sh  firewall_rules.toml  firewhal_systemd.service  install_firewhal_debug.sh  install_firewhal_release.sh  install_script.sh  interface_state.toml  release_install.sh
aya-workspace/: Cargo.toml  README.md  firewall_rules.toml  install_firewhal_release.sh  install_script.sh
aya-workspace/firewhal-core/: Cargo.toml
aya-workspace/firewhal-daemon/: Cargo.toml
aya-workspace/firewhal-daemon/src/: main.rs
aya-workspace/firewhal-discord-bot/: Cargo.toml
aya-workspace/firewhal-ipc/: Cargo.toml
aya-workspace/firewhal-kernel/: Cargo.toml  build.rs
aya-workspace/firewhal-kernel-common/: Cargo.toml
aya-workspace/firewhal-kernel-common/src/: lib.rs
aya-workspace/firewhal-kernel-ebpf/: Cargo.toml
aya-workspace/firewhal-kernel-ebpf/src/: main.rs
aya-workspace/firewhal-kernel/src/: main.rs
aya-workspace/firewhal-tui/: Cargo.toml
aya-workspace/firewhal-tui/src/: main.rs
firewall-rule-testing/: Cargo.toml  firewall.rules
firewall-rule-testing/src/: firewall.rules  main.rs
firewhal-core/: Cargo.toml
firewhal-core/src/: lib.rs
firewhal-daemon/: Cargo.toml
firewhal-daemon/src/: main.rs
firewhal-discord-bot/: .env  Cargo.toml
firewhal-discord-bot/src/: main.rs
firewhal-hashing/: Cargo.toml
firewhal-hashing/src/: main.rs
firewhal-ipc/: Cargo.toml
firewhal-ipc/src/: main.rs
firewhal-kernel/: Cargo.toml
firewhal-kernel-common/src/: lib.rs
firewhal-kernel-ebpf/src/: main.rs
firewhal-kernel/src/: main.rs
firewhal-tui/: Cargo.toml
firewhal-tui/src/: discord_notification.rs  main.rs  ui.rs
firewhal-tui/src/ui/: app.rs  app_management.rs  debug_print.rs  interface_selection.rs  main_menu.rs  mod.rs  permissive_mode.rs  rule_management.rs
primary-workspace/: Cargo.toml  example_daemon_hash_input.txt  install_script.sh
primary-workspace/firewhal-core/: Cargo.toml
primary-workspace/firewhal-core/src/: lib.rs
primary-workspace/firewhal-daemon/: Cargo.toml  example_daemon_hash_input.txt
primary-workspace/firewhal-daemon/src/: main.rs
primary-workspace/firewhal-discord-bot/src/: main.rs
primary-workspace/firewhal-ipc/: Cargo.toml
primary-workspace/firewhal-ipc/src/: main.rs
primary-workspace/firewhal-tui/: Cargo.toml
primary-workspace/firewhal-tui/src/: app.rs  main.rs  ui.rs
primary-workspace/firewhal-tui/src/ui/: app.rs  debug_print.rs  interface_selection.rs  main_menu.rs  splash.rs
src/: app.rs  main.rs  ntfy.rs  ui.rs
src/ui/: main_menu.rs  splash.rs  us.rs
zmq-testing/firewhal-client/: Cargo.toml
zmq-testing/firewhal-client/src/: main.rs
zmq-testing/firewhal-core/: Cargo.toml
zmq-testing/firewhal-core/src/: lib.rs
zmq-testing/firewhal-ipc/: Cargo.toml
zmq-testing/firewhal-ipc/src/: main.rs
zmq-testing/zmq-client/: Cargo.toml
zmq-testing/zmq-client/src/: main.rs
zmq-testing/zmq-router/: Cargo.toml
zmq-testing/zmq-router/src/: main.rs
