[package]
name = "firewhal-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
firewhal-core = { path = "../firewhal-core" }
zmq = { workspace = true }
daemonize = "0.5.0"
nix = { workspace = true, features = ["signal", "user", "fs"] }
bincode = { workspace = true }
serde = { workspace = true }
toml = "0.9.8"
tokio = { workspace=true }
pnet = "0.35.0"
anyhow.workspace = true
futures = "0.3.31"
