[package]
name = "firewhal-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
firewhal-core = { path = "../firewhal-core" }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } # Or another Discord lib
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15" # For loading .env file
