[package]
name = "firewhal-kernel"
version = "0.1.0"
edition = "2021"

license.workspace = true

[dependencies]
async-stream = "0.3.6"
aya-obj = "0.2.1"
firewhal-kernel-common = { path = "../firewhal-kernel-common", features = ["user"] }
futures = "0.3.31"
plain = {workspace = true}
pnet = "0.35.0"
sha3 = "0.10.8"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
firewhal-kernel-ebpf = { path = "../firewhal-kernel-ebpf" }

[[bin]]
name = "firewhal-kernel"
path = "src/main.rs"

# These dependencies are for the userspace host application ONLY.
[target.'cfg(not(target_arch = "bpf"))'.dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
aya-log-ebpf = { workspace = true }
bytes = "1"
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
firewhal-core = { path = "../firewhal-core" }
libc = { workspace = true }
log = { workspace = true }
network-interface = "2.0.3"
simple-logging = "2.0.2"
tokio = { workspace=true }
zmq = { workspace = true } 
nix = { workspace = true, features = ["user"] }

# [profile.release]
# debug = 1