[package]
name = "firewhal-kernel-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []
user = ["aya"]
aya = ["dep:aya"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf.workspace = true
network-types = "0.1.0"
plain = "0.2.3"

[lib]
path = "src/lib.rs"
