[package]
name = "firewhal-kernel-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []
user = ["aya"]
aya = ["dep:aya"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf.workspace = true
aya-log-ebpf.workspace = true
network-types = { workspace = true }
plain = { workspace = true }

[lib]
path = "src/lib.rs"
