[package]
name = "firewhal-kernel-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
firewhal-kernel-common = { path = "../firewhal-kernel-common" }
network-types = "0.0.8"

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "firewhal-kernel"
path = "src/main.rs"
