[package]
name = "firewhal-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
firewhal-core = { path = "../firewhal-core" }
aya = "0.13.1"
sha3 = "0.10.8"
zmq = "0.10.0"
tokio = { version = "1.45.1", features = ["signal", "sync", "rt", "rt-multi-thread", "macros", "time"] }
hex = "0.4.3"
daemonize = "0.5.0"
nix = { version = "0.30.1", features = ["signal", "user", "fs"] }
bincode = "2.0.1"
