[package]
name = "firewhal-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
firewhal-core = { path = "../firewhal-core" } # Depends on the shared library
color-eyre = "0.6.4"
crossterm = "0.29.0"
ratatui = "0.29.0"
zmq = "0.10.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
